# ClawFlow

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
applications/: __init__.py
clawflow/: __init__.py  sdk.py
docs/: api_reference.md  architecture.md  community.md  comparison.md  defense_qa.md  delivery_checklist.md  design_philosophy.md  developer_guide.md  github_publish_guide.md  open_source_policy.md  openapi.json  performance_and_scalability.md  security_and_governance.md  self_review.md  technical_report.docx  technical_report.md  user_manual.md  whitepaper.md
outputs/: TODO.md  benchmark_results.json  benchmark_results.md  daily_plan.md  delete_dry_run.md  deliverable_verification.json  evaluation_leaderboard.json  evaluation_leaderboard.md  failure_recovery_report.json  failure_recovery_report.md  multi_agent_report.md  plugin_workspace_stats.json  rag_answer.md  release_manifest.json  release_manifest.md  report_outline.md  research_summary.md  run_all_applications.md  submission_package_manifest.json  submission_package_manifest.md
scripts/: __init__.py  _visual.py  check_publish_readiness.py  create_application_template.py  create_connector_template.py  create_tool_template.py  export_openapi.py  generate_diagrams.py  generate_ppt.py  generate_report.py  generate_screenshots.py  package_release.py  run_all_applications.py  run_benchmark.py  run_demo.ps1  run_demo.sh  verify_deliverables.py  verify_submission_package.py
slides/: ClawFlow_presentation.pptx  ppt_outline.md  slide_notes.md
tests/: test_api.py  test_applications.py  test_approvals.py  test_benchmark.py  test_evaluation_templates.py  test_memory.py  test_multi_agent.py  test_plugins.py  (+10 more)
(+103 files in other folders)
